# notes-agent

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
app/: agent.py  database.py  main.py  models.py
static/: index.html
tests/: conftest.py  test_api.py  test_tools.py
