[project]
name = "notes-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "langgraph==0.2.70",
    "langchain-openai==0.2.14",
    "langchain-core==0.3.28",
    "psycopg2-binary==2.9.10",
    "pydantic==2.10.6",
    "aiofiles==23.2.1",
    "langsmith>=0.2.0",
]
